@@ -3,6 +3,9 @@ NEXT
 
 - fixed issue561: adapt autouse fixture example for python3.
 
+- fixed issue453: assertion rewriting issue with __repr__ containing
+  "\n{", "\n}" and "\n~".
+
 2.6.1
 -----------------------------------
 
